--- a/ticker/ticker.css
+++ b/ticker/ticker.css
@@ -1,1 +1,38 @@
 /* CSS declarations go here */
+
+body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 200;
+    margin: 50px 0;
+    padding: 0;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+#outer {
+    width: 600px;
+    margin: 0 auto;    
+}
+
+.investor {
+    cursor: pointer;
+    padding: 5px;
+}
+
+.investor .name {
+    display: inline-block;
+    width: 300px;
+    font-size: 1.75em;
+}
+
+.investor .value {
+    display: inline-block;
+    width: 100px;
+    text-align: right;
+    font-size: 2em;
+    font-weight: bold;
+    color: #777;
+}
