CSS around adding stocks

--- a/ticker/client/dashboard.css
+++ b/ticker/client/dashboard.css
@@ -70,4 +70,20 @@ body {
     font-size: 0.8em;
 }
 
+input:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+#new_stock input {
+    font-size: 1.2em;
+}
+
+#new_stock input.symbol::-webkit-input-placeholder {
+    color: #A9A9A9;
+}
+
+#new_stock input.shares, input.cost_basis {
+    width: 100px;
+}
+
 
