--- a/ticker/client/dashboard.css
+++ b/ticker/client/dashboard.css
@@ -37,7 +37,7 @@ input[type="button"]:active {
 }
 
 #outer {
-    width: 600px;
+    width: 800px;
     margin: 0 auto;    
 }
 
@@ -100,6 +100,10 @@ input[type="button"]:active {
 
 .dashboard .secondary {
     font-size: 0.8em;
+}
+
+.dashboard .tertiary {
+    font-size: 0.5em;
 }
 
 .stock_list {
