Basic typeahead implemented
Notes:

This is currently backed by the Stocks collection, which is the set of
stocks that users collectively own.  This will soon be replaced by the
full list of stocks traded.

Style changes to follow, as bootstrap CSS is overriding some of the
styles

--- a/ticker/client/dashboard.css
+++ b/ticker/client/dashboard.css
@@ -121,6 +121,7 @@ input[type="button"]:active {
 
 #new_stock input {
     font-size: 1.2em;
+    vertical-align: top;
 }
 
 #new_stock input.symbol::-webkit-input-placeholder {
