--- a/ticker/client/chart.css
+++ b/ticker/client/chart.css
@@ -4,11 +4,19 @@
 	border: 1px dotted black;
 }
 
-.chart rect {
-	text-align: right;
-	color: white;
+.chartBar rect {
 	background-color: steelblue;
 	padding: 5px;
+}
+
+.chartDivs .bar {
 	margin: 1px;
-	height: 10px;
+	height: 100px;
+	line-height: 100px;
+	background-color: steelblue;
+	text-align: right;
+
+	color: white;
+	padding: 5px;
+	font-size: 24px;
 }
