--- a/ticktock/client/base.css
+++ b/ticktock/client/base.css
@@ -3,6 +3,7 @@ body {
   font-weight: 200;
   margin: 50px 0;
   padding: 0;
+  height: 5000px;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
