Navigating between user portfolios

--- a/ticktock/client/dashboard/dashboard.less
+++ b/ticktock/client/dashboard/dashboard.less
@@ -46,3 +46,17 @@
 .stock_list {
   margin-bottom: 15px;
 }
+
+.owners {
+
+
+  .owner:after {
+    content: ', ';
+  }
+
+  .owner:last-child:after {
+    content: '';
+  }
+
+
+}
