Moved infographic to its own folder

--- a/ticktock/client/dashv2/dashv2.less
+++ b/ticktock/client/dashv2/dashv2.less
@@ -1,8 +1,4 @@
 
-// colors
-
-@red: #db4437;
-@green: rgb(15, 157, 88);
 @face_size: 80px;
 
 
@@ -38,50 +34,7 @@
   #canvas {
     position: fixed;
     left: 0px;
-    right: 0px; // make this 300px to show the right pane
-    height: 100%;
-
-    
-    color: white;
-
-    .background {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-
-      &.up {
-        background-color: @green;
-      }
-
-      &.down {
-        background-color: @red;
-      }
-
-    }
-
-    .summary {
-      width: 500px;
-      text-align: center;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 100px;
-      line-height: normal;
-
-      .big {
-        font-size: 10em;
-        font-family: 'Montserrat','Helvetica Neue', Helvetica, Arial, sans-serif;
-      }
-
-      .medium {
-        font-size: 6em;
-        font-family: 'Montserrat','Helvetica Neue', Helvetica, Arial, sans-serif;
-      }
-
-
-    }
-
-
-
+    right: 300px;
   }
 
 
