Line labels as divs, not SVG text

--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -1,4 +1,25 @@
 
 .lines {
-  margin: 50px
+  margin: 50px;
+  position: relative;
+
+  .lineLabel {
+    position: absolute;
+    color: white;
+
+    .symbol {
+      font-weight: bold;
+    }
+
+    .gain {
+      
+    }
+
+
+
+  }
+
+
+
 }
+
