--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -3,6 +3,22 @@
   margin: 50px;
   position: relative;
 
+
+  path {
+    stroke: white;
+    stroke-width: 5;
+    fill: none;
+    stroke-opacity: 0.2;
+    stroke-linecap: round;
+  }
+
+  path:hover {
+    stroke-width: 5;
+    stroke-opacity: 1;
+  }
+
+
+
   .lineLabel {
     position: absolute;
     color: white;
@@ -12,7 +28,7 @@
     }
 
     .gain {
-      
+
     }
 
 
