--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -6,7 +6,7 @@
 
   path {
     stroke: white;
-    stroke-width: 5;
+    //stroke-width: 5;
     fill: none;
     stroke-opacity: 0.2;
     stroke-linecap: round;
