--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -8,12 +8,23 @@
     stroke: white;
     //stroke-width: 5;
     fill: none;
-    stroke-opacity: 0.2;
+    
     stroke-linecap: round;
+  
+    &.stock {
+      stroke-opacity: 0.2;
+    }
+
+    &.investor {
+      stroke-opacity: 1;
+    }
+
+
   }
 
+
+
   path:hover {
-    stroke-width: 5;
     stroke-opacity: 1;
   }
 
