--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -1,12 +1,14 @@
 
 .lines {
-  margin: 50px;
-  position: relative;
+  position: absolute;
+  top: 50px;
+  bottom: 50px;
+  left: 50px;
+  right: 50px;
 
 
   path {
     stroke: white;
-    //stroke-width: 5;
     fill: none;
     
     stroke-linecap: round;
