CSS/HTML for 3 pane layout

--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -12,12 +12,25 @@
   }
 }
 
+
+.movers {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  top: 0px;
+  width: 200px;
+  
+  background-color: #333;
+}
+
+
+
 .lines {
   position: absolute;
-  top: 50px;
-  bottom: 50px;
-  left: 50px;
-  right: 50px;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 200 + 20px;
 
 
   path {
