--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -21,6 +21,28 @@
   width: 200px;
   
   background-color: #333;
+
+
+  .moverTile {
+    color: #999;
+    font-family: 'Montserrat';
+    margin: 20px;
+    margin-bottom: 25px;
+    //border: 1px solid #999;
+
+    .symbol {
+      font-size: 16px;
+      text-transform: uppercase;
+    }
+
+    .gain {
+      margin-top: 5px;
+      font-size: 24px;
+    }
+
+  }
+
+
 }
 
 
@@ -41,6 +63,11 @@
   
     &[data-type=stock] {
       stroke-opacity: 0.2;
+
+      &[data-active=true] {
+        stroke-opacity: 1;
+      }
+
     }
 
     &[data-type=investor] {
