Sorting based on gain

--- a/ticktock/client/graphs/lines.less
+++ b/ticktock/client/graphs/lines.less
@@ -28,7 +28,10 @@
     font-family: 'Montserrat';
     margin: 20px;
     margin-bottom: 25px;
-    //border: 1px solid #999;
+    
+    &:hover {
+      color: white;
+    }
 
     .symbol {
       font-size: 16px;
@@ -76,32 +79,6 @@
 
 
   }
-
-
-
-  path:hover {
-    stroke-opacity: 1;
-  }
-
-
-
-  .lineLabel {
-    position: absolute;
-    color: white;
-
-    .symbol {
-      font-weight: bold;
-    }
-
-    .gain {
-
-    }
-
-
-
-  }
-
-
 
 }
 
