Reorganized file structure for overview

--- a/ticktock/client/overview/competition.less
+++ b/ticktock/client/overview/competition.less
@@ -10,11 +10,11 @@
   border-radius: @radius;
 }
 
-.right {
+#overview .competition {
   background-color: #eee;
 }
 
-.social {
+#overview .competition .leaderboard {
 
   height: 100%;
   font-family: 'Montserrat';
