--- a/ticktock/client/overview/portfolio.less
+++ b/ticktock/client/overview/portfolio.less
@@ -5,9 +5,10 @@
   .tiles {
     color: #999;
     font-family: 'Montserrat';
+    margin: 20px;
 
     .tile {
-      margin: 25px;
+      margin-bottom: 25px;
     }
 
     .tile:hover {
