Add stock button (doesn't do anything yet)

--- a/ticktock/client/overview/portfolio.less
+++ b/ticktock/client/overview/portfolio.less
@@ -2,10 +2,11 @@
   
   background-color: #333;
   overflow: scroll;
+  color: #999;
+  font-family: 'Montserrat';
+    
 
   .tiles {
-    color: #999;
-    font-family: 'Montserrat';
     margin: 20px;
 
     .tile {
@@ -26,6 +27,12 @@
       font-size: 24px;
     }
 
+  }
+
+  .add {
+    margin: 20px;
+    color: white;
+    text-transform: uppercase;
   }
 
 }
