jquery ui + basic slider

--- a/ticktock/client/overview/competition.less
+++ b/ticktock/client/overview/competition.less
@@ -13,12 +13,15 @@
 
 #overview .competition {
   background-color: #eee;
+  overflow: scroll;
+  font-family: 'Montserrat';
+}
+
+#overview .competition > div {
+  margin: 20px;
 }
 
 #overview .competition .leaderboard {
-
-  font-family: 'Montserrat';
-  margin: 20px;
 
   .user[current=true], .user:hover {
     .name {color: black;}
