--- a/ticktock/client/overview/portfolio.less
+++ b/ticktock/client/overview/portfolio.less
@@ -1,3 +1,8 @@
+
+#overview .portfolio > div {
+  margin: 20px;
+}
+
 #overview .portfolio {
   
   background-color: #333;
@@ -6,8 +11,10 @@
   font-family: 'Montserrat';
     
 
+
+
   .tiles {
-    margin: 20px;
+    
 
     .tile {
       margin-bottom: 25px;
@@ -30,7 +37,6 @@
   }
 
   .add {
-    margin: 20px;
     color: white;
     text-transform: uppercase;
   }
