--- a/ticktock/client/overview/competition.less
+++ b/ticktock/client/overview/competition.less
@@ -12,7 +12,7 @@
 }
 
 #overview .competition {
-  background-color: #eee;
+  background-color: #f5f5f5;
   overflow: scroll;
   font-family: 'Montserrat';
 }
