--- a/ticktock/client/overview/portfolio.less
+++ b/ticktock/client/overview/portfolio.less
@@ -11,6 +11,14 @@
   //color: #999;
   
   background-color: #e5e5e5;
+  &[data-overall=up] {
+    background-color: mix(#f5f5f5,@green,95%);
+  }
+  &[data-overall=down] {
+    background-color: mix(#f5f5f5,@red,95%);
+  }
+
+  
 
 
   overflow: scroll;
@@ -33,7 +41,7 @@
     }
 
     .tile:hover .symbol:after {
-      content: "\2666";
+      content: "\2190";
       margin-left: 5px;
     }
 
