--- a/ticktock/client/overview/visualization.less
+++ b/ticktock/client/overview/visualization.less
@@ -40,5 +40,16 @@
 
     }
   }
+
+  .loading {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    color: white;
+    font-size: 24px;
+
+
+
+  }
 }
 
