--- a/ticktock/client/overview/visualization.less
+++ b/ticktock/client/overview/visualization.less
@@ -42,13 +42,19 @@
   }
 
   .loading {
-    width: 100%;
-    height: 100%;
-    background-color: black;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+
+
+    background-color: fadeout(black,50%);
     color: white;
     font-size: 24px;
 
-
+    padding-top: 100px;
+    text-align: center;
 
   }
 }
