--- a/ticktock/client/overview/visualization.less
+++ b/ticktock/client/overview/visualization.less
@@ -41,6 +41,20 @@
     }
   }
 
+  .grid {
+    stroke: white;
+
+    .domain {display: none;}
+
+    &.minor {
+      stroke-opacity: 0.1;
+    }
+    &.major {
+      stroke-opacity: 1;
+    }
+
+  }
+
   .loading {
     position: absolute;
     top: 0px;
