--- a/ticktock/client/overview/visualization.less
+++ b/ticktock/client/overview/visualization.less
@@ -47,7 +47,7 @@
     .domain {display: none;}
 
     &.minor {
-      stroke-opacity: 0.1;
+      stroke-opacity: 0;
     }
     &.major {
       stroke-opacity: 1;
@@ -63,7 +63,7 @@
     right: 0px;
 
 
-    background-color: fadeout(black,50%);
+    //background-color: fadeout(black,50%);
     color: white;
     font-size: 24px;
 
