Aggregate portfolio info in overview

--- a/ticktock/client/overview/portfolio.less
+++ b/ticktock/client/overview/portfolio.less
@@ -26,12 +26,23 @@
     
 
 
+  .info {
+    .gain {
+      margin-top: 5px;
+      font-size: 24px;
+
+      &.up {color: @green;}
+      &.down {color: @red;}
+    }
+
+    .tile {
+      margin-bottom: 25px;
+    }
+  }
+
 
   .tiles {
     
-
-
-
     .tile {
       margin-bottom: 25px;
     }
