Left to right layout

--- a/ticktock/client/overview/overview.less
+++ b/ticktock/client/overview/overview.less
@@ -1,4 +1,32 @@
 #overview {
+
+  .competition {
+    position: absolute;
+    width: 300px;
+    height: 100%;
+    left: 0px;
+  }
+  
+  .portfolio {
+    position: absolute;
+    left: 300px;
+    width: 200px;
+    height: 100%;
+  }
+
+  .visualization {
+    position: absolute;
+    right: 0px;
+    left: 500px;
+    height: 100%;
+  }
+
+
+
+}
+
+
+#overview-rtl {
   
   .visualization {
     position: absolute;
@@ -21,8 +49,29 @@
     right: 0px;
   }
 
+}
 
+#overview-sandwich {
+  .portfolio {
+    position: absolute;
+    left: 0px;
+    width: 200px;
+    height: 100%;
+  }
 
+  .visualization {
+    position: absolute;
+    left: 200px;
+    right: 300px;
+    height: 100%;
+  }
+
+  .competition {
+    position: absolute;
+    width: 300px;
+    height: 100%;
+    right: 0px;
+  }
 }
 
 #overview {
