--- a/ticktock/client/overview/visualization.less
+++ b/ticktock/client/overview/visualization.less
@@ -1,6 +1,7 @@
 
 @green: #0f9d58;
 @red: #db4437;
+@headline-height: 100px;
 
 #overview .visualization {
   &[data-overall=up] {
@@ -11,9 +12,25 @@
     background-color: @red;
   }
 
+
+  .headline {
+    position: absolute;
+    font-family: 'Montserrat';
+    font-size: @headline-height;
+    line-height: @headline-height;
+    height: @headline-height;
+    color: white;
+
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    text-align: center;
+  }
+
+
   .lines {
     position: absolute;
-    top: 10px;
+    top: @headline-height + 10px;
     bottom: 10px;
     left: 10px;
     right: 10px;
@@ -67,7 +84,7 @@
     color: white;
     font-size: 24px;
 
-    padding-top: 100px;
+    padding-top: 150px;
     text-align: center;
 
   }
