--- a/ticktock/client/overview/visualization.less
+++ b/ticktock/client/overview/visualization.less
@@ -61,10 +61,13 @@
   .grid {
     stroke: white;
 
+    text {
+      stroke: white;
+    }
+
     .domain {display: none;}
 
     &.minor {
-      stroke-opacity: 0;
     }
     &.major {
       stroke-opacity: 1;
