--- a/ticktock/client/overview/competition.less
+++ b/ticktock/client/overview/competition.less
@@ -13,7 +13,7 @@
 
 #overview .competition {
   background-color: #f5f5f5;
-  overflow: scroll;
+  overflow-y: scroll;
   font-family: 'Montserrat';
 }
 
